# msscellparse

./: CMakeLists.txt  Janela_Principal.glade  README.md  banco.cpp  banco.hpp  estruturas.cpp  estruturas.hpp  janela_principal.cpp  janela_principal.hpp  loader_thread.cpp  loader_thread.hpp  loarder_thread.hpp  main.cpp
